<?xml version="1.0"?>
<package>
  <name>hanp_to_iri_converter</name>

  <version>0.0.1</version>

  <description>The hanp_to_iri_converter package.</description>

  <maintainer email="harmish@laas.fr">Harmish Khambhaita</maintainer>

  <!--  <author email="author_email">author_name</author>  -->

  <license>BSD</license>

  <!--  <url website >http://wiki.ors.org/hanp_to_iri_converter</url>  -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>hanp_msgs</build_depend>
  <build_depend>iri_perception_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>hanp_msgs</run_depend>
  <run_depend>iri_perception_msgs</run_depend>

  <!--  <test_depend>some_pkg</test_depend>  -->

  <!--  <conflict>some_pkg</conflict>  -->

  <!--  <replace>some_pkg</replace>  -->

  <export>
    <!-- <metapackage/> -->

  </export>
</package>
